HW04: Добавить API получения списка постов друзей